tests/typescript/pos/simple/upcast-00.ts
/*@ foo :: () => {v: number + string | true} */
function foo(){
  return 4;
}
