tests/typescript/neg/simple/obj-03.ts

// TODO : add explicit cast here.

/*@ foo :: (p: #Point + { x: string } ) => { top | true }  */
function foo(p: any) {

  return p.x;

}
